test_compile_errors/tests/compile-fail/v_comma.stderr
error: no rules expected the token `,`
 --> $DIR/v_comma.rs:7:12
  |
7 |     infov!(,);
  |            ^ no rules expected this token in macro call
